--- a/N1/.config
+++ b/N1/.config
@@ -34,10 +34,23 @@ CONFIG_PACKAGE_kmod-phy-marvell-10g=n
 CONFIG_PACKAGE_kmod-rtc-rx8025=n
 CONFIG_PACKAGE_kmod-sfp=n
 CONFIG_PACKAGE_kmod-thunderx-net=n
+CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_usb-modeswitch=y
+CONFIG_PACKAGE_usbids=y
 CONFIG_PACKAGE_kmod-vmxnet3=n
 CONFIG_PACKAGE_kmod-wdt-sp805=n
-
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
+CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
+CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
+CONFIG_PACKAGE_kmod-usb-net-smsc75xx=y
+CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
+CONFIG_PACKAGE_kmod-usb-net-sr9700=y
+CONFIG_PACKAGE_kmod-usb3=y
 # luci
 CONFIG_PACKAGE_luci-app-filetransfer=n
 CONFIG_PACKAGE_luci-app-argon-config=y
