--- a/N1/.config
+++ b/N1/.config
@@ -59,7 +59,8 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-wechatpush=y
-
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-opkg=y
 # themes
 CONFIG_PACKAGE_luci-theme-argon=y
 
